--- a/css/style.css
+++ b/css/style.css
@@ -158,6 +158,10 @@ button {
 
 /* =============================HEADER======================================= */
 
+.header__top{
+  position: relative;
+}
+
 
 
 .header__top-inner {
@@ -191,8 +195,24 @@ button {
   display: flex;
   flex-direction: column-reverse;
   overflow: hidden;
-  transition: all .3s;
+  transition: transform .3s;
+}
 
+.header__top-nav{
+}
+
+.header__top-nav--scroll{
+  position: fixed;
+  left: 50%;
+  transform: translate(-50%, 20%);
+  z-index: 100;
+  padding: 0 10px;
+  border-radius: 4px;
+  background: rgba(146, 146, 146, 0.74);
+  box-shadow: 0px 0px 2px rgba(201, 201, 201);
+}
+.header__top-nav--scroll .nav__list-link{
+  color:#fff;
 }
 
 .nav__list-link::before {
