--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ html, body {
   -webkit-text-size-adjust: 100%;
   font-family: 'Oswald';
   font-style: normal;
-  
+
 }
 
 input, button, textarea {
@@ -91,7 +91,8 @@ a {
   padding: 0 15px;
   margin: 0 auto;
 }
-.overlay{
+
+.overlay {
   position: fixed;
   top: 0;
   bottom: 0;
@@ -103,10 +104,11 @@ a {
   transition: all .1s;
 }
 
-.overlay--visible{
+.overlay--visible {
   visibility: visible;
   transition: all .33s;
 }
+
 .header {
   padding-bottom: 18px;
 }
@@ -135,10 +137,10 @@ button {
   background: none;
 }
 
-.up{
+.up {
   width: 60px;
   height: 60px;
-  border:2px dashed #333;
+  border: 2px dashed #333;
   background: rgba(114, 114, 114, 0.404);
   border-radius: 50%;
   color: #fff;
@@ -146,19 +148,20 @@ button {
   justify-content: center;
   align-items: center;
   position: fixed;
-  right:1vw;
+  right: 1vw;
   top: 90vh;
   z-index: 50;
   transform: scale(0);
   transition: all .3s;
 }
-.up--scroll{
+
+.up--scroll {
   transform: scale(1);
 }
 
 /* =============================HEADER======================================= */
 
-.header__top{
+.header__top {
   position: relative;
 }
 
@@ -198,21 +201,22 @@ button {
   transition: transform .3s;
 }
 
-.header__top-nav{
-}
+.header__top-nav {}
 
-.header__top-nav--scroll{
+.header__top-nav--scroll {
   position: fixed;
   left: 50%;
   transform: translate(-50%, 20%);
   z-index: 100;
   padding: 0 10px;
   border-radius: 4px;
-  background: rgba(146, 146, 146, 0.74);
   box-shadow: 0px 0px 2px rgba(201, 201, 201);
+  backdrop-filter: blur(7px);
 }
-.header__top-nav--scroll .nav__list-link{
-  color:#fff;
+
+.header__top-nav--scroll .nav__list-link {
+  color: rgb(0, 0, 0);
+  font-weight: 700;
 }
 
 .nav__list-link::before {
@@ -293,6 +297,7 @@ button {
   max-width: 600px;
   max-height: 400px;
 }
+
 .story__image-box img {
   width: 100%;
   height: 100%;
@@ -469,30 +474,31 @@ button {
   text-transform: uppercase;
   color: #000000;
 }
-  
+
 /* ======================ADAPTIVE============================ */
 
 
 @media screen and (max-width:1100px) {
   /* STORY */
 
-  .story__content{
+  .story__content {
     display: flex;
     flex-direction: column;
   }
 }
 
 @media screen and (max-width:700px) {
-/* UP */
-.up{
-  display: none;
-}
+
+  /* UP */
+  .up {
+    display: none;
+  }
 
   /* BURGER-MENU */
-  .burger{
+  .burger {
     width: 45px;
     height: 45px;
-    
+
     position: fixed;
     border-radius: 35%;
     top: 15px;
@@ -505,33 +511,35 @@ button {
     transition: all .3s;
   }
 
-  .burger--scroll{
+  .burger--scroll {
     background: #81707049;
     box-shadow: 0px 0px 5px #333;
   }
-  .burger span{
+
+  .burger span {
     width: 30px;
     height: 4px;
     background: #fff;
     display: block;
     margin: 4px;
   }
+
   .burger::before,
-  .burger::after{
+  .burger::after {
     content: "";
     width: 30px;
     height: 4px;
     background: #fff;
     display: block;
   }
-  
-  .burger--active{
+
+  .burger--active {
     box-shadow: 0px 0px 10px #000000;
     transform: scale(1.08);
   }
-  
+
   /* HEADER */
-  .header__top{
+  .header__top {
     position: fixed;
     top: 0;
     right: 0;
@@ -543,10 +551,12 @@ button {
     transform: translateX(100%);
     transition: all .3s;
   }
-  .header__top--media{
+
+  .header__top--media {
     transform: translateX(0%);
   }
-  .header__top-inner{
+
+  .header__top-inner {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -554,46 +564,53 @@ button {
 
   }
 
-  .header__top-logo{
-    color:#fff;
+  .header__top-logo {
+    color: #fff;
   }
-  .nav__list{
+
+  .nav__list {
     display: flex;
     flex-direction: column;
   }
 
-  .nav__list-link{
-    color:#fff;
+  .nav__list-link {
+    color: #fff;
   }
 
-  .image-box__content{
+  .image-box__content {
     font-size: 40px;
     line-height: 60px;
   }
-  .image-box__content::after{
+
+  .image-box__content::after {
     width: 60px;
   }
 }
 
-@media screen and (max-width: 450px){
+@media screen and (max-width: 450px) {
+
   /* FOOTER */
-  .email{
+  .email {
     padding: 6px 40px 16px 40px;
   }
 
   /* STORY */
-  .story__text{
-    font-size: 15px;line-height: 23px;
+  .story__text {
+    font-size: 15px;
+    line-height: 23px;
   }
+
   /* CARD */
-  .card__text{
+  .card__text {
     font-size: 13px;
     line-height: 20px;
   }
 }
-@media screen and (max-width: 310px){
+
+@media screen and (max-width: 310px) {
+
   /* FOOTER */
-  .email{
+  .email {
     padding: 3px 20px 10px 20px;
   }
 }
