--- a/css/style.css
+++ b/css/style.css
@@ -210,13 +210,13 @@ button {
   z-index: 100;
   padding: 0 10px;
   border-radius: 4px;
+  background: rgba(58, 58, 58, 0.651);
   box-shadow: 0px 0px 2px rgba(201, 201, 201);
-  backdrop-filter: blur(7px);
 }
 
 .header__top-nav--scroll .nav__list-link {
-  color: rgb(0, 0, 0);
-  font-weight: 700;
+  color: rgb(255, 255, 255);
+  font-weight: 300;
 }
 
 .nav__list-link::before {
